# forfun

./: .gitignore  CMakeLists.txt  puzzles.code-workspace
Day 1/: puzzle1.cpp
Day 2/: puzzle2.cpp
Day 3/: puzzle3.cpp
Day 4/: puzzle4.cpp
Day 5/: puzzle5.cpp
Day 6/: puzzle6.cpp  puzzle6_2.cpp
Day 7/: puzzle7.cpp
Day 8/: puzzle8.cpp
Day1/: puzzle1.cpp
Day10/: CMakeLists.txt  puzzle10.cpp  puzzle10_2_glpk.cpp
Day11/: output  puzzle11.cpp  puzzle11_2.cpp
Day12/: output.txt  puzzle12.cpp
Day2/: puzzle2.cpp
Day3/: puzzle3.cpp
Day4/: puzzle4.cpp
Day5/: puzzle5.cpp
Day6/: puzzle6.cpp  puzzle6_2.cpp
Day7/: output  puzzle7.cpp
Day8/: output.txt  puzzle8.cpp
Day9/: CMakeLists.txt  output.txt  puzzle9.cpp  puzzle9_2.cpp
common/: common.h
