cmake_minimum_required(VERSION "3.50")
set(CMAKE_C_COMPILER clang)
set(CMAKE_CXX_COMPILER clang++)
set(CMAKE_CXX_STANDARD 26)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(puzzles2025)
set(COMMON_HEADERS common/common.h)
add_executable(puzzle1 "Day 1/puzzle1.cpp")
add_executable(puzzle2 "Day 2/puzzle2.cpp")
add_executable(puzzle3 "Day 3/puzzle3.cpp")
add_executable(puzzle4 "Day 4/puzzle4.cpp")
add_executable(puzzle5 "Day 5/puzzle5.cpp")
